# ucore-arm-userapp

./: README  README.md  env.sh  uclibc_config.linuxthread
libminigui-gpl-3.0.12/: Makefile.in  confdefs.h  configure  configure.in  mgconfig.h.in  mgconfig.h.in~
libminigui-gpl-3.0.12/autom4te.cache/: output.1  requests  traces.0  traces.1
libminigui-gpl-3.0.12/cmake/: Makefile.in
libminigui-gpl-3.0.12/etc/: Makefile.in
libminigui-gpl-3.0.12/include/: Makefile.in
libminigui-gpl-3.0.12/include/ctrl/: Makefile.in
libminigui-gpl-3.0.12/m4/: Makefile.in
libminigui-gpl-3.0.12/rtos/: Makefile.in
libminigui-gpl-3.0.12/src/: Makefile.in
libminigui-gpl-3.0.12/src/client/: Makefile.in
libminigui-gpl-3.0.12/src/control/: Makefile.in
libminigui-gpl-3.0.12/src/ex_ctrl/: Makefile.in
libminigui-gpl-3.0.12/src/font/: Makefile.in
libminigui-gpl-3.0.12/src/gui/: Makefile.in
libminigui-gpl-3.0.12/src/ial/: Makefile.am  Makefile.in  goldfish_ts.c  goldfish_ts.h  ial.c
libminigui-gpl-3.0.12/src/include/: Makefile.in
libminigui-gpl-3.0.12/src/kernel/: Makefile.in
libminigui-gpl-3.0.12/src/libc/: Makefile.in
libminigui-gpl-3.0.12/src/main/: Makefile.in
libminigui-gpl-3.0.12/src/misc/: Makefile.in  nposix.c
libminigui-gpl-3.0.12/src/mybmp/: Makefile.in
libminigui-gpl-3.0.12/src/newgal/goldfish/: Makefile  Makefile.am  Makefile.in  videogoldfish.c  videogoldfish.h
libminigui-gpl-3.0.12/src/newgal/goldfish/.deps/: videogoldfish.Plo
linux_header_goldfish/include/: ..install.cmd
minesweeper/: Makefile  minesweeper.c
(+71 files in other folders)
